test(benchmark): make ActuatorEnvComparisonTest fully self-contained and toggleable
- Move spring-env-benchmark/ from a sibling directory outside the
  repository into spring-config-guard itself, as a plain directory (not a
  Maven module -- same convention as demo-project/demo-project-clean).
  A single `git clone` of spring-config-guard now gives anyone everything
  needed to reproduce the benchmark; previously it depended on a local
  path (../spring-env-benchmark) that only existed on this machine.
- Update ActuatorEnvComparisonTest's BENCHMARK_RESOURCES_PATH and Javadoc,
  and VALIDATION.md's reproduction command, to match the new in-repo path.
- Replace @Disabled with @Tag("benchmark") + a surefire excludedGroups
  configuration (default "benchmark", bound to a POM property so it can be
  overridden from the command line). @Disabled is a static switch that had
  to be commented out and restored by hand every time; excludedGroups is a
  runtime filter -- `mvn test` still never runs it, and
  `mvn test -Dgroups=benchmark -DexcludedGroups=` runs it on demand, no
  source edit needed either way.
- Document both invocations in the class Javadoc, including why
  -DexcludedGroups= (empty) is required alongside -Dgroups=benchmark: the
  POM's default exclusion of "benchmark" would otherwise still apply,
  cancelling out the inclusion and running nothing.
- ConfigFileGrouper.mergeGroup(): filesInDirectory.get(0) -> getFirst(),
  equivalent SequencedCollection accessor, no behavior change.